--- a/docs/server/messages/svsjoin.yml
+++ b/docs/server/messages/svsjoin.yml
@@ -22,3 +22,6 @@ example:
     Joins user 36EAAAAAA to #wibble overriding any modes
   text: |-
     :36D SVSJOIN 36EAAAAAA #wibble :
+history:
+  1206: |-
+    This message is now provided by the services module instead of the spanningtree module. You should check this module is loaded before sending. If this message is received from a link using the 1205 protocol it will be encapsulated before being forwarded to the target.
