--- a/docs/server/messages/svspart.yml
+++ b/docs/server/messages/svspart.yml
@@ -18,3 +18,6 @@ example:
     Parts user 36EAAAAAA from #wibble with the reason "wobble"
   text: |-
     :36D SVSPART 36EAAAAAA #wibble :wobble
+history:
+  1206: |-
+    This message is now provided by the services module instead of the spanningtree module. You should check this module is loaded before sending. If this message is received from a link using the 1205 protocol it will be encapsulated before being forwarded to the target.
