Fix the protocol version table on the CAPAB message page.

--- a/docs/server/messages/capab.yml
+++ b/docs/server/messages/capab.yml
@@ -75,9 +75,9 @@ extra: |-
 
   Protocol Version | Supported By
   ---------------- | -------------
-  1202             | InspIRCd v2 &mdash; v3
-  1205             | InspIRCd v3 & v4
-  1206             | InspIRd v4
+  1202             | InspIRCd v2 &amp; v3
+  1205             | InspIRCd v3 &amp; v4
+  1206             | InspIRCd v4
 
 description: |-
   Negotiates the capabilities of the remote server. This includes data such as modes, modules, and limits.
