--- a/docs/server/messages/fmode.yml
+++ b/docs/server/messages/fmode.yml
@@ -6,8 +6,8 @@ syntax:
     ts: The creation time of the specified channel.
     modes: The modes which are being set on the channel.
     mode-parameters: The parameters to the modes which are being set on the channel.
-  text: |-
-    <channel> <ts> <modes> [<mode-parameters>]+
+  text:
+  - <channel> <ts> <modes> [<mode-parameters>]+
 description: |-
   Changes the username (ident) of the source user to the specified value.
 example:
