--- a/docs/server/messages/lmode.yml
+++ b/docs/server/messages/lmode.yml
@@ -8,8 +8,8 @@ syntax:
     list-entry: The value of a list mode entry.
     list-ts: The time at which the list mode entry was added.
     list-setter: The mask of the user that created the list mode entry.
-  text: |-
-    <channel> <ts> <list-mode> [<list-entry> <list-ts> <list-setter>]+
+  text:
+  - <channel> <ts> <list-mode> [<list-entry> <list-ts> <list-setter>]+
 added: 1206
 description: |-
   Synchronises the contents of a mode list.
