--- a/docs/server/messages/resync.yml
+++ b/docs/server/messages/resync.yml
@@ -2,8 +2,8 @@ name: RESYNC
 syntax:
   fields:
     channel: The channel to resynchronize.
-  text: |-
-    <channel>
+  text:
+  - <channel>
 description: |-
   Resynchronizes the state of the specified channel. Useful for when an [IJOIN](/server/messages/ijoin) is sent for an unknown channel.
 example:
