--- a/docs/server/messages/snonotice.yml
+++ b/docs/server/messages/snonotice.yml
@@ -3,8 +3,8 @@ syntax:
   fields:
     snochar: The server notice character ([v4 docs](/4/snomasks), [v3 docs](/3/snomasks)) that the message is associated with.
     message: The message to send to server operators.
-  text: |-
-    <snochar> :<message>
+  text:
+  - <snochar> :<message>
 description: |-
   Sends a server notice to server operators with the specified mask.
 example:
