--- a/docs/server/messages/burst.yml
+++ b/docs/server/messages/burst.yml
@@ -4,8 +4,9 @@ phase:
 syntax:
   fields:
     ts: The time at which the remote server started bursting. Used for clock synchronization.
-  text: |-
-    [<ts>]
+  text:
+  - ''
+  - <ts>
 description: |-
   Marks the source server as currently sending the initial network burst.
 example:
