--- a/docs/server/messages/delline.yml
+++ b/docs/server/messages/delline.yml
@@ -4,8 +4,8 @@ syntax:
   fields:
     type: The type of X-line to add (e.g. E).
     mask: The type-dependent mask to add the X-line on.
-  text: |-
-    <type> <mask>
+  text:
+  - <type> <mask>
 description: |-
   Removes an X-line on a mask.
 example:
