--- a/docs/server/messages/encap.yml
+++ b/docs/server/messages/encap.yml
@@ -5,8 +5,8 @@ syntax:
     target: A server identifier or glob pattern for a server name for the target server.
     message: The name of the message which is being encapsulated.
     parameters: The parameters for the specified message.
-  text: |-
-    <target> <message> [<parameters>]+
+  text:
+  - <target> <message> [<parameters>]+
 description: |-
   Encapsulates a message to the specified target. If the target does not exist or the encapsulated message type is unknown then the message is non-fatally dropped.
 example:
