--- a/docs/server/messages/svsjoin.yml
+++ b/docs/server/messages/svsjoin.yml
@@ -4,8 +4,8 @@ syntax:
     uid: The UUID of the user to join to the specified channel.
     channel: The channel which the user is being joined to.
     key: The secret key used for joining the channel.
-  text: |-
-    <uid> <channel> [<key>]
+  text:
+  - <uid> <channel> [<key>]
 description: |-
   Forces the specified user to join a channel. If an empty key is specified then override any modes which might prevent the join.
 module: services
