--- a/docs/server/messages/svsnick.yml
+++ b/docs/server/messages/svsnick.yml
@@ -5,8 +5,8 @@ syntax:
     newnick: The new nickname of the target user.
     newnickts: The time at which this nickname change happened.
     oldnickts: The time at which the last nickname change happened. If this doesn't match then the nick will not be changed.
-  text: |-
-    <uid> <newnick> <newnickts> [<oldnickts>]
+  text:
+  - <uid> <newnick> <newnickts> [<oldnickts>]
 description: |-
   Changes the nickname of the specified user.
 module: services
