--- a/docs/4/modules/mysql.yml
+++ b/docs/4/modules/mysql.yml
@@ -4,19 +4,19 @@ depends_on:
   what: a third-party library ([libmysqlclient](https://dev.mysql.com/downloads/connector/c/))
 
 description: |-
-  This module provides the ability for SQL modules to query a MySQL database.
+  This module provides the ability for SQL modules to query a MariaDB or MySQL database.
 
 configuration:
 - name: database
   description: |-
-    The `<database>` tag defines a MySQL database to connect to. This tag can be defined as many times as required.
+    The `<database>` tag defines a MariaDB or MySQL database to connect to. This tag can be defined as many times as required.
   attributes:
   - name: module
     type: Text
     required: true
     default: null
     description: |-
-      *This MUST be set to "mysql" to connect to a MySQL database.*
+      *This MUST be set to "mysql" to connect to a MariaDB or MySQL database.*
   - name: id
     type: Text
     required: true
@@ -28,37 +28,37 @@ configuration:
     required: true
     default: null
     description: |-
-      The hostname or IP address of a MySQL server.
+      The hostname or IP address of a MariaDB or MySQL server.
   - name: port
     type: Number
     required: true
     default: null
     description: |-
-      The port on which the MySQL server is listening.
+      The port on which the MariaDB or MySQL server is listening.
   - name: user
     type: Text
     required: true
     default: null
     description: |-
-      The username to log into the MySQL server with.
+      The username to log into the MariaDB or MySQL server with.
   - name: pass
     type: Text
     required: true
     default: null
     description: |-
-      The password to log into the MySQL server with.
+      The password to log into the MariaDB or MySQL server with.
   - name: name
     type: Text
     required: true
     default: null
     description: |-
-      The name of the MySQL database to use.
+      The name of the MariaDB or MySQL database to use.
   - name: charset
     type: Text
     required: false
     default: null
     description: |-
-      If defined then a custom character set to use with the MySQL server.
+      If defined then a custom character set to use with the MariaDB or MySQL server.
   - name: srv
     type: Boolean
     required: false
