Symlink the v3 version of regex_pcre2 to the v4 one.
These files are identical.

--- a/docs/3/modules/regex_pcre2.yml
+++ b/docs/3/modules/regex_pcre2.yml
@@ -1,9 +1,1 @@
-name: regex_pcre2
-
-introduction: ""
-
-depends_on:
-  what: a third-party library ([PCRE2](https://www.pcre.org))
-
-description: |-
-  This module provides the `pcre` regular expression engine which uses the [PCRE2](https://www.pcre.org) library.
+../../4/modules/regex_pcre2.yml
