--- a/docs/4/commands/_user.yml
+++ b/docs/4/commands/_user.yml
@@ -2,9 +2,9 @@ name: USER
 syntax: >-
   <username> <unused> <unused> <realname>
 description: |-
-  Specifies a username (ident) and real name (gecos) when connecting to the server.
+  Specifies a username and real name when connecting to the server.
 example:
 - description: |-
-    Specifies the username (ident) "jsmith" and the real name "John Smith &lt;jsmith@example.com&gt;"
+    Specifies the username "jsmith" and the real name "John Smith &lt;jsmith@example.com&gt;"
   text: |-
     /USER jsmith * * :John Smith <jsmith@example.com>
