--- a/docs/4/modules/sqlauth.yml
+++ b/docs/4/modules/sqlauth.yml
@@ -64,7 +64,7 @@ configuration:
     $md5pass    | An MD5 hash of the password sent with `/PASS` by the connecting user (requires [the md5 module](/4/modules/md5)).
     $nick       | The nickname of the connecting user.
     $pass       | The password sent with `/PASS` by the connecting user.
-    $real       | The real name (gecos) of the connecting user.
+    $real       | The real name of the connecting user.
     $server     | The name of the server the connecting user connected to.
     $sid        | The unique identifier of the server the connecting user connected to.
     $sha256pass | A SHA-256 hash of the password sent with `/PASS` by the connecting user (requires [the sha2 module](/4/modules/sha2)).
