--- a/docs/4/modules/hostcycle.yml
+++ b/docs/4/modules/hostcycle.yml
@@ -1,4 +1,4 @@
 name: hostcycle
 
 description: |-
-  This module sends a fake disconnection and reconnection when a user's username (ident) or hostname changes to allow clients to update their internal caches.
+  This module sends a fake disconnection and reconnection when a user's username or hostname changes to allow clients to update their internal caches.
