--- a/mkdocs_dev.yml
+++ b/mkdocs_dev.yml
@@ -43,7 +43,7 @@ validation:
   nav:
     omitted_files: ignore
 copyright: All documentation is licensed under the <a href="/license">GNU GPLv2</a>.
-repo_url: https://github.com/inspircd/inspircd-docs
+repo_url: https://github.com/inspircd/docs
 site_description: InspIRCd is a modular C++ Internet Relay Chat (IRC) server for UNIX-like and Windows systems.
 site_name: InspIRCd Documentation
 site_url: https://docs.inspircd.org/
