--- a/docs/3/modules/nationalchars.yml
+++ b/docs/3/modules/nationalchars.yml
@@ -2,7 +2,9 @@ name: nationalchars
 
 introduction: |-
   !!! warning ""
-      If you want to use a custom 8-bit character set then you're probably better off using [the codepage module](/3/modules/codepage) instead.
+      This module is deprecated and has been removed in the next major version of InspIRCd.
+
+      You should consider using [the codepage module](/3/modules/codepage) instead.
 
 description: |-
   This module allows the server administrator to define what characters are allowed in nicknames and channel names and how those characters should be compared in a case insensitive way.
