--- a/docs/3/modules/censor.yml
+++ b/docs/3/modules/censor.yml
@@ -2,7 +2,7 @@ name: censor
 
 introduction: |-
   !!! warning ""
-      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
 
       You should consider using [the filter module](/3/modules/filter) instead.
 
