--- a/docs/3/modules/hostchange.yml
+++ b/docs/3/modules/hostchange.yml
@@ -1,5 +1,9 @@
 name: hostchange
 
+introduction: |-
+  !!! warning ""
+      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+
 description: |-
   This module allows the server administrator to define custom rules for applying hostnames to users.
 
