--- a/docs/3/modules/regex_pcre.yml
+++ b/docs/3/modules/regex_pcre.yml
@@ -1,6 +1,10 @@
 name: regex_pcre
 
-introduction: ""
+introduction: |-
+  !!! warning ""
+      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+
+      You should consider using [the regex_pre2 module](/3/modules/regex_pcre2) instead.
 
 depends_on:
   what: a third-party library ([PCRE](https://www.pcre.org))
