--- a/docs/3/modules/regex_tre.yml
+++ b/docs/3/modules/regex_tre.yml
@@ -2,7 +2,7 @@ name: regex_tre
 
 introduction: |-
   !!! warning ""
-      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
 
       You should consider using [the regex_stdlib module](/3/modules/regex_stdlib) instead.
 
