--- a/docs/3/modules/userip.yml
+++ b/docs/3/modules/userip.yml
@@ -1,5 +1,9 @@
 name: userip
 
+introduction: |-
+  !!! warning ""
+      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+
 description: |-
   This module adds the `/USERIP` command which allows users to find out the IP address of one or more connected users.
 
