Fix the depends_on for log_json to use the new JSON library.

--- a/docs/4/modules/log_json.yml
+++ b/docs/4/modules/log_json.yml
@@ -3,7 +3,7 @@ name: log_json
 introduction: ""
 
 depends_on:
-  what: a third-party library ([RapidJSON](https://rapidjson.org/))
+  what: a third-party library ([yyjson](https://github.com/ibireme/yyjson))
 
 description: |-
   This module provides the ability to log to JSON.
