xline_db: Fix default value of maxbackoff setting

--- a/docs/4/modules/xline_db.yml
+++ b/docs/4/modules/xline_db.yml
@@ -29,7 +29,7 @@ configuration:
   - name: maxbackoff
     type: Duration
     required: false
-    default: 0s
+    default: 120 * `backoff`
     description: |-
       The maximum write period that should be allowed even if incremental backoff is enabled.
   details: ""
