ircv3_sts: Fix default value of duration & add explanation

--- a/docs/4/modules/ircv3_sts.yml
+++ b/docs/4/modules/ircv3_sts.yml
@@ -38,7 +38,7 @@ configuration:
   - name: duration
     type: Duration
     required: false
-    default: 60d
+    default: 5m
     description: |-
       The time period that the STS policy should last for.
   - name: port
@@ -66,3 +66,8 @@ client_caps:
 - name: '[sts](https://ircv3.net/specs/extensions/sts.html)'
   description: |-
     Defines a mechanism for clients to upgrade plaintext IRC connections to TLS (SSL).
+
+special_notes: |-
+  The default duration of 5 minutes is a safety precaution aimed at initial implementation and testing of an STS policy.
+
+  Once you're comfortable with the configuration the duration should be raised to a month or more for effective enforcement.
