Revert "hidechans: Add missing hideservices setting"
This reverts commit 352ccd8c660e5ca292047b7da3ba95bf192a3a04.

--- a/docs/4/modules/hidechans.yml
+++ b/docs/4/modules/hidechans.yml
@@ -14,16 +14,10 @@ configuration:
     default: 'No'
     description: |-
       Whether server operators are affected by the user mode.
-  - name: hideservices
-    type: Boolean
-    required: false
-    default: 'Yes'
-    description: |-
-      Whether channels which services users are in are hidden even from server operators.
   details: ""
   example: |-
     ```xml
-    <hidechans affectsopers="no" hideservices="yes">
+    <hidechans affectsopers="no">
     ```
 
 umodes:
