--- a/docs/4/modules/permchannels.yml
+++ b/docs/4/modules/permchannels.yml
@@ -41,7 +41,7 @@ configuration:
   - name: maxbackoff
     type: Duration
     required: false
-    default: 120 * `backoff`
+    default: 120 * `<permchanneldb:backoff>`
     description: |-
       The maximum write period that should be allowed even if incremental backoff is enabled.
   - name: writeversion
