Several fixes to the module settings documentation.
* dnsbl: Fix default value of duration setting
* ircv3_sts: Fix default value of duration & add explanation
* openssl: Remove tlsv1 & add tlsv13 settings
* permchannels: Fix default value of listmodes & maxbackoff settings
* setname: Fix default value of notifyopers setting
* shun: Remove affectopers setting
* watch: Fix default value of maxwatch setting
* xline_db: Fix default value of maxbackoff setting

Co-authored-by: Sadie Powell <sadie@witchery.services>

--- a/docs/4/modules/permchannels.yml
+++ b/docs/4/modules/permchannels.yml
@@ -17,7 +17,7 @@ configuration:
   - name: listmodes
     type: Boolean
     required: false
-    default: 'No'
+    default: 'Yes'
     description: |-
       Whether to save list modes to the permchannels configuration file.
   - name: operonly
@@ -41,7 +41,7 @@ configuration:
   - name: maxbackoff
     type: Duration
     required: false
-    default: 0s
+    default: 120 * `<permchanneldb:backoff>`
     description: |-
       The maximum write period that should be allowed even if incremental backoff is enabled.
   - name: writeversion
